--- a/package.json
+++ b/package.json
@@ -7,18 +7,26 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "test": "jest --config package.json",
-    "lint": "eslint src --ext .ts"
+    "lint": "eslint src --ext .ts",
+    "dev": "nodemon src/index.ts"
   },
   "devDependencies": {
     "@codingsans/eslint-config": "4.0.0",
+    "@types/bcrypt": "5.0.0",
+    "@types/express": "4.17.15",
     "@types/jest": "24.9.0",
+    "@types/jsonwebtoken": "9.0.0",
+    "@types/morgan": "1.9.3",
     "@types/node": "13.1.8",
     "eslint": "6.8.0",
     "jest": "24.9.0",
+    "nodemon": "2.0.20",
     "prettier": "1.19.1",
+    "prisma": "4.8.0",
     "ts-jest": "24.3.0",
     "ts-node": "8.6.2",
-    "typescript": "3.7.5"
+    "ts-node-dev": "2.0.0",
+    "typescript": "4.9.4"
   },
   "jest": {
     "testEnvironment": "node",
@@ -45,5 +53,14 @@
       "json",
       "node"
     ]
+  },
+  "dependencies": {
+    "@prisma/client": "4.8.0",
+    "axios": "1.2.1",
+    "bcrypt": "5.1.0",
+    "express": "4.18.2",
+    "express-async-errors": "3.1.1",
+    "jsonwebtoken": "9.0.0",
+    "morgan": "1.10.0"
   }
 }
