--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/server.ts",
     "test": "jest --config package.json",
     "lint": "eslint src --ext .ts",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/server.ts"
   },
   "devDependencies": {
     "@codingsans/eslint-config": "4.0.0",
@@ -18,6 +18,8 @@
     "@types/jsonwebtoken": "9.0.0",
     "@types/morgan": "1.9.3",
     "@types/node": "13.1.8",
+    "@types/supertest": "2.0.12",
+    "@types/uuid": "9.0.0",
     "eslint": "6.8.0",
     "jest": "24.9.0",
     "nodemon": "2.0.20",
@@ -29,6 +31,9 @@
     "typescript": "4.9.4"
   },
   "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    },
     "testEnvironment": "node",
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
@@ -61,6 +66,8 @@
     "express": "4.18.2",
     "express-async-errors": "3.1.1",
     "jsonwebtoken": "9.0.0",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "supertest": "6.3.3",
+    "uuid": "9.0.0"
   }
 }
